--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -18,8 +18,8 @@ ja:
       letter: 手紙
       record: 記録
       count: 総数
-      not_already_letter: 未送付
-      already_letter: 送付済
+      not_sent_letter: 未送付
+      sent_letter: 送付済
       episode: エピソード
       success_story: 成功談
       failure_story: 失敗談
