Fix：記録のカテゴリーを削除・タイトルをテーマに修正 #16 #25

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -5,9 +5,8 @@ ja:
       record: 記録
     attributes:
       record:
-        category: 記録のカテゴリー
-        title: 記録のタイトル
-        content: 記録の内容
+        theme: テーマ
+        content: 内容
       letter:
         message: 'メッセージ'
         send_at: '送付日'
