Add：記録の作成フォームにタグ選択欄を追加 #25

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -7,6 +7,8 @@ ja:
       record:
         theme: テーマ
         content: 内容
+        tags: タグ
+        tag_ids: タグ
       letter:
         message: 'メッセージ'
         send_at: '送付日'
