Add：記録詳細ページにコメントフォームを実装 #28

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -10,5 +10,7 @@ ja:
         tags: タグ
         tag_ids: タグ
       letter:
-        message: 'メッセージ'
-        send_at: '送付日'
+        message: メッセージ
+        send_at: 送付日
+      comment:
+        content: コメント
