--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -6,6 +6,9 @@ ja:
     term: 利用規約
     policy: プライバシーポリシー
     line_add: 友達追加
+    create: 作成
+    add: 追加
+    close: '閉じる'
     delete: 削除
     delete_confirm: 削除してもよろしいですか？
   homes:
