Fix：タグ機能をカテゴリー機能として実装し直した #25 #35

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -7,6 +7,8 @@ ja:
       record:
         theme: テーマ
         content: 内容
+        categories: カテゴリー
+        categorids: カテゴリー
         tags: タグ
         tag_ids: タグ
       letter:
