--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -15,7 +15,7 @@ ja:
     index_back: 一覧へ
   homes:
     start:
-      app_detail: 未来の自分に手紙と記録を送るサービス
+      app_detail: 未来の自分に手紙とリマインドを送るサービス
       section:
         first: LINEの友達に追加
         second: 「レタレコ」で何ができる？
@@ -23,28 +23,26 @@ ja:
   users:
     show:
       letter: 手紙
-      record: 記録
+      record: リマインド
       count: 総数
       not_send_letter: 未送付
       sent_letter: 送付済
+      not_send_record: 未通知
+      sent_record: 確認待ち
+      checked_record: 確認済み
       episode: エピソード
       success_story: 成功談
       failure_story: 失敗談
       letter_unit: '%{count}通'
       record_unit: '%{count}件'
-      records_path: 記録一覧へ
+      records_path: リマインド一覧へ
   records:
     index:
-      title: 記録一覧
-      select_category: 全て
     new:
-      title: 記録作成
-      theme: 例）今日１番うれしかったこと, 最近気になっているニュースなど
-      content: 5分間のタイマーを設定して、テーマについて思いついたことをどんどん書きましょう（誤字、脱字も気にしない）
-      tag: タグを複数残す場合は、半角スペースで区切って書いてください
-      tag_info: ※ハッシュタグで一覧表示することが可能です
+      title: リマインドのタイトルを記入してください
+      content: リマインドについて補足があれば記入してください
     show:
-      title: '#%{name}の記録一覧'
+      title: '#%{name}のリマインド一覧'
       date: 作成日
       content: 内容
       tag: ハッシュタグ
@@ -70,8 +68,8 @@ ja:
       max: 100文字以内で書いてみよう
   shared:
     record:
-      index: 記録の一覧
-      new: 記録の作成
+      index: 確認済み
+      sent: 確認待ち
     letter:
       index: お届け済みの手紙一覧
       new: 手紙の作成
@@ -79,4 +77,4 @@ ja:
       footer_app_name: © 2022. レタレコ
       profile: プロフィール
       letter: 手紙
-      record: 記録
+      record: リマインド
