--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -13,3 +13,13 @@ ja:
         current_message: 今の自分について
         outlook: 目標・展望
         send_at: お届け日
+  enums:
+    record:
+      state:
+        draft: 未出題
+        sent: 未回答
+        checked: 回答済
+      result:
+        unanswered: 無回答
+        correct: 正解
+        wrong: 不正解
