--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -22,69 +22,11 @@ ja:
         third: 使い方
   users:
     show:
-      letter: 手紙
-      record: クイズ
-      count: 総数
-      not_send_letter: 未送付
-      sent_letter: 送付済
-      draft_record: 未出題
-      sent_record: 未回答
-      checked_record: 回答済
-      correct_record: 'YES'
-      wrong_record: 'NO'
-      episode: エピソード
-      success_story: 成功談
-      failure_story: 失敗談
-      letter_unit: '%{count}通'
-      record_unit: '%{count}問'
-      records_path: クイズ一覧へ
-  records:
-    index:
-      not_checked: 回答済のクイズはありません
-      not_sent: 未回答のクイズはありません
-      set_time: '%{time}のあなたから出題'
-      send_time: '%{time}に出題'
-      checked_time: '%{time}に回答'
-      not_checked: 期限内に回答しなかったため
-      yes: 'YES'
-      no: 'NO'
-      unanswered: 無回答
-      answer: で回答しました
-      not_answer: となりました
-    new:
-      title: 未来のあなたへクイズを出題
-      content: Yes or Noで答えられるようなクイズを記入してください
-    show:
-      created_at: 作成日
-      send_at: 通知日
-      content: 内容
-  letters:
-    index:
-      created_at: 作成日
-      send_at: お届け日
-    new:
-      title: 例）〇歳の自分へ
-      current_message: 今の自分について、堅苦しくない文章で簡潔にまとめましょう。
-      outlook: 例）・〇〇大学に合格・海外に住んでいる
-      future_message: 未来の自分へメッセージを書きましょう
-    show:
-      future_message: 過去のからメッセージ
-      current_message: 当時の自分について
-      outlook: 当時の目標・展望
-      created_date: 作成日
-      send_date: お届け日
-  comments:
-    form:
-      max: 100文字以内で書いてみよう
+      user_name: ユーザ＝名
+      before_events: 開催前
+      after_events: 開催後
   shared:
-    record:
-      index: 回答済
-      sent: 未回答
-    letter:
-      index: お届け済みの手紙一覧
-      new: 手紙の作成
     footer:
       footer_app_name: © 2022. レタレコ
-      profile: プロフィール
-      letter: 手紙
-      record: クイズ
+      events: イベント一覧
+      setting: 設定
