--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -22,9 +22,18 @@ ja:
         third: 使い方
   users:
     show:
-      user_name: ユーザ＝名
+      user_name: ユーザー名
       before_events: 開催前
       after_events: 開催後
+    new:
+      setting: 設定
+      account_label: connpassのユーザー名（※1）
+      count_label: 予約イベントの表示数（※2）
+      submit: '確定'
+      account_attention: ※1：正しいユーザー名を登録していない場合、異なるイベントが表示されます。
+      count_attention: ※2：最小で10件、最大で100件のイベントを表示できます。
+    update:
+      success: ユーザー設定を編集しました
   shared:
     footer:
       footer_app_name: © 2022. レタレコ
