--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -25,12 +25,14 @@ ja:
       user_name: ユーザー名
       before_events: 開催前
       after_events: 開催後
+      venue_undecided: 会場未定
     new:
       setting: 設定
       account_label: connpassのユーザー名（※1）
+      prefecture_label: 住んでいる都道府県
       count_label: 予約イベントの表示数（※2）
       submit: '確定'
-      account_attention: ※1：正しいユーザー名を登録していない場合、異なるイベントが表示されます。
+      account_attention: ※1：正しいユーザー名を登録しない場合、異なる予約イベントが表示されます。
       count_attention: ※2：最小で10件、最大で100件のイベントを表示できます。
     update:
       success: ユーザー設定を編集しました
