--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -8,11 +8,18 @@ ja:
     policy: プライバシーポリシー
     line_add: 友達追加
   homes:
-    start:
+    top:
       app_detail: connpassのもくもく会に参加しよう！
       section:
         first: LINEの友達に追加
-        third: 使い方
+        second: アプリ機能
+      function:
+        first_title: 1. もくもく会の検索
+        first_content: チャット形式でもくもく会の情報を検索できます。新着順、ランダムで最大５件取得できます。
+        second_title: 2. 予約イベントの確認
+        second_content: 過去に参加したイベントを含め、予約したイベントを確認できます。
+        third_title: 3. もくもく会のお知らせ
+        third_content: 毎週月曜日に、その週に開催されるオンラインもくもく会の情報をお知らせします。
   users:
     show:
       user_name: ユーザー名
