Add：ユーザが設定したキーワードから関連性のあるもくもく会を取得して表示する処理を実装 #44

--- a/config/locales/activerecord/ja.yml
+++ b/config/locales/activerecord/ja.yml
@@ -8,3 +8,5 @@ ja:
         prefecture: 住んでいる都道府県
         count: 予約イベントの表示数
         word_first: 興味のあるキーワード
+        word_second: 興味のあるキーワード
+        word_third: 興味のあるキーワード
