--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -29,7 +29,7 @@ ja:
         second_title: 2. 予約イベントを確認
         second_content: 過去に参加したイベントを含め、予約したイベントを確認できます。
         third_title: 3. もくもく会をお知らせ
-        third_content: 毎週月曜日に、その週に開催されるオンラインもくもく会の情報をお知らせします。
+        third_content: あらかじめ設定したキーワードに関するもくもく会が登録されたらお知らせします。
   users:
     show:
       user_name: ユーザー名
@@ -44,12 +44,12 @@ ja:
       word_first_label: 興味のあるキーワード（※3）
       word_second_label: 【任意】興味のあるキーワード（２つ目）
       word_third_label: 【任意】興味のあるキーワード（３つ目）
-      checked_label: オンラインもくもく会の通知ON/OFF（※4）
-      submit: '確定'
+      checked_label: もくもく会の新着情報の通知（※4）
+      submit: 確定
       account_attention: ※1：正しいユーザー名を登録しない場合、異なる予約イベントが表示されます。
       count_attention: ※2：予約イベントの表示数を、10〜100件の間で選択できます。
       keyword_attention: ※3：設定したキーワードで関連性のあるもくもく会を確認できます。
-      checked_attention: ※4：通知ONにすると、毎週月曜日の朝9時に、その週に開催されるオンラインもくもく会が通知されます。
+      checked_attention: ※4：通知をONにすると、設定したキーワードに関するもくもく会が登録されたらお知らせします。
     update:
       success: ユーザー設定を編集しました
   shared:
